zebra-rpc/src/methods/tests/snapshot/snapshots/get_difficulty@mainnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot/get_block_template_rpcs.rs
expression: difficulty
---
14134749558280407000000000000000000000000000000000000000000000000000000000.0
