zebra-rpc/src/methods/tests/snapshot/snapshots/get_difficulty@testnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot/get_block_template_rpcs.rs
expression: difficulty
---
1.5
