zebra-rpc/src/methods/tests/snapshot/snapshots/get_difficulty_invalid_populated@testnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot/get_block_template_rpcs.rs
expression: difficulty
---
{
  "Err": {
    "code": 0,
    "message": "Zebra's state only has a few blocks, wait until it syncs to the chain tip"
  }
}
