zebra-rpc/src/methods/tests/snapshot/snapshots/get_mining_info@mainnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot/get_block_template_rpcs.rs
expression: get_mining_info
---
{
  "networksolps": 2,
  "networkhashps": 2,
  "chain": "Mainnet"
}
