zebra-rpc/src/methods/tests/snapshot/snapshots/get_mining_info@testnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot/get_block_template_rpcs.rs
expression: get_mining_info
---
{
  "networksolps": 0,
  "networkhashps": 0,
  "chain": "Testnet"
}
