zebra-rpc/src/methods/tests/snapshot/snapshots/get_peer_info@mainnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot/get_block_template_rpcs.rs
expression: get_peer_info
---
[
  {
    "addr": "127.0.0.1:8233",
    "inbound": false
  }
]
