zebra-rpc/src/methods/tests/snapshot/snapshots/submit_block@testnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot/get_block_template_rpcs.rs
expression: submit_block_response
---
{
  "Err": {
    "code": 0,
    "message": "failed to deserialize into block, error msg: io error: failed to fill whole buffer"
  }
}
