zebra-rpc/src/methods/tests/snapshot/snapshots/validate_address_basic@mainnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot/get_block_template_rpcs.rs
expression: validate_address
---
{
  "isvalid": true,
  "address": "t3fqvkzrrNaMcamkQMwAyHRjfDdM2xQvDTR",
  "isscript": true
}
